k8/deployment.yaml
# label of status: released' indicates the version that's considered released in
# that namespace
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: starter-kafka
  namespace: dev
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: starter-kafka
        version: v0.0.3
        status: released
    spec:
      imagePullSecrets:
      - name: thoughtworks-aelab-di-circleci-quayio-deploy-user-pull-secret
      containers:
      - name: service
        image: quay.io/thoughtworks_aelab/starter-kafka:0.0.3-2
        imagePullPolicy: Always
        ports:
          - name: service
            containerPort: 8082
          - name: readiness
            containerPort: 8083
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /actuator/health
            port: 8083
          initialDelaySeconds: 45
          periodSeconds: 10
          timeoutSeconds: 5
