k8/k8-no-istio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: starter-ingress
  namespace: dev
spec:
  backend:
    serviceName: starter-kafka
    servicePort: 8082
